--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>SelfieDog</title>
+    <title>Selfie Doggy</title>
     <meta name='robots' content='max-image-preview:large' />
     <link rel="alternate" type="application/rss+xml" title="SelfieDog &raquo; Feed" href="https://selfiedog.io/index.php/feed/" />
     <link rel="alternate" type="application/rss+xml" title="SelfieDog &raquo; Comments Feed" href="https://selfiedog.io/index.php/comments/feed/" />
@@ -597,7 +597,7 @@
                         <div class="elementor-element elementor-element-2cce224 elementor-align-right elementor-widget__width-initial elementor-widget elementor-widget-button" data-id="2cce224" data-element_type="widget" data-widget_type="button.default">
                             <div class="elementor-widget-container">
                                 <div class="elementor-button-wrapper">
-                                    <a class="elementor-button elementor-button-link elementor-size-sm" href="https://jup.ag/swap/SOL-NULL" target="_blank">
+                                    <a class="elementor-button elementor-button-link elementor-size-sm" href="https://jup.ag/swap/SOL-BubKk8K7FYiQjgfsqMqEYpQeVCbnnfhPZqWWoGRKpump" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">BUY NOW</span>
 					</span>
@@ -1007,7 +1007,7 @@
                                                                                 <div class="flex flex-row flex-wrap justify-start grow-0 shrink-0 basis-full min-w-0 box-border -mx-1 w-full gap-y-0">
                                                                                     <div class="max-w-24/24 md:max-w-14/24 flex-24/24 md:flex-14/24 block relative box-border my-0 px-1">
                                                                                         <div class="not-italic font-normal text-neutral7 text-[14px] leading-[24px]">
-                                                                                            <p class="font_4 wixui-rich-text__text"><span class="wixui-rich-text__text">NULL</span></p>
+                                                                                            <p class="font_4 wixui-rich-text__text"><span class="wixui-rich-text__text">BubKk8K7FYiQjgfsqMqEYpQeVCbnnfhPZqWWoGRKpump</span></p>
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -1025,7 +1025,7 @@
                                             data-widget_type="button.default">
                                             <div class="elementor-widget-container">
                                                 <div class="elementor-button-wrapper">
-                                                    <a class="elementor-button elementor-button-link elementor-size-sm" href="https://www.dextools.io/app/es/solana/pair-explorer/NULL?t=1718059437210" target="_blank">
+                                                    <a class="elementor-button elementor-button-link elementor-size-sm" href="https://www.dextools.io/app/es/solana/pair-explorer/BubKk8K7FYiQjgfsqMqEYpQeVCbnnfhPZqWWoGRKpump" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">dextools</span>
 					</span>
@@ -1654,12 +1654,12 @@
                             </style>
                             <div class="elementor-social-icons-wrapper elementor-grid">
                                 <span class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-grow elementor-repeater-item-f131ccc" href="https://t.me/selfiedog_sol" target="_blank">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-grow elementor-repeater-item-f131ccc" href="https://t.me/OfficialSdoggy" target="_blank">
 						<span class="elementor-screen-only">Telegram-plane</span>
                                 <svg class="e-font-icon-svg e-fab-telegram-plane" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"></path></svg>                                </a>
                                 </span>
                                 <span class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-animation-grow elementor-repeater-item-aacef33" href="https://twitter.com/SelfieDog_SOL" target="_blank">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-animation-grow elementor-repeater-item-aacef33" href="https://twitter.com/OfficialSdoggy" target="_blank">
 						<span class="elementor-screen-only">X-twitter</span>
                                 <svg class="e-font-icon-svg e-fab-x-twitter" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"></path></svg>                                </a>
                                 </span>
