--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                 }
                 return !1
             }
-
             function f(e, t, n) {
                 var r = "undefined" != typeof WorkerGlobalScope && self instanceof WorkerGlobalScope ? new OffscreenCanvas(300, 150) : i.createElement("canvas"),
                     a = r.getContext("2d", {
@@ -1037,7 +1036,7 @@
                                             data-widget_type="button.default">
                                             <div class="elementor-widget-container">
                                                 <div class="elementor-button-wrapper">
-                                                    <a class="elementor-button elementor-button-link elementor-size-sm" href="https://dexscreener.com/solana/NULL" target="_blank">
+                                                    <a class="elementor-button elementor-button-link elementor-size-sm" href="https://dexscreener.com/solana/BubKk8K7FYiQjgfsqMqEYpQeVCbnnfhPZqWWoGRKpump" target="_blank">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">dexscreener</span>
 					</span>
