--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Selfie Doggy</title>
+    <title>Selfie Doggie</title>
     <meta name='robots' content='max-image-preview:large' />
     <link rel="alternate" type="application/rss+xml" title="SelfieDog &raquo; Feed" href="https://selfiedog.io/index.php/feed/" />
     <link rel="alternate" type="application/rss+xml" title="SelfieDog &raquo; Comments Feed" href="https://selfiedog.io/index.php/comments/feed/" />
@@ -666,7 +666,7 @@
                                         font-size: 59px
                                     }
                                 </style>
-                                <h2 class="elementor-size-default" style="font-size: 200px; color: #0b0b0b">SELFIE DOGGY</h2>
+                                <h2 class="elementor-size-default" style="font-size: 200px; color: #0b0b0b">Selfie Doggie</h2>
                             </div>
                         </div>
                     </div>
@@ -1059,7 +1059,7 @@
                     <div class="elementor-widget-wrap elementor-element-populated">
                         <div class="elementor-element elementor-element-51996873 elementor-invisible elementor-widget elementor-widget-heading" data-id="51996873" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;pulse&quot;}" data-widget_type="heading.default">
                             <div class="elementor-widget-container">
-                                <div style="font-size: 100px; color: #0b0b0b">Selfie Doggy Moments</div>
+                                <div style="font-size: 100px; color: #0b0b0b">Selfie Doggie Moments</div>
                             </div>
                         </div>
                     </div>
@@ -1085,7 +1085,7 @@
                                                         <div class="hover-area">
                                                             <div class="profile-body">
                                                                 <h2 class="profile-title">
-                                                                    Selfie Doggy </h2>
+                                                                    Selfie Doggie </h2>
                                                                 <p class="profile-designation"></p>
                                                             </div>
                                                         </div>
@@ -1110,7 +1110,7 @@
                                                         <div class="hover-area">
                                                             <div class="profile-body">
                                                                 <h2 class="profile-title">
-                                                                    Selfie Doggy </h2>
+                                                                    Selfie Doggie </h2>
                                                                 <p class="profile-designation"></p>
                                                             </div>
                                                         </div>
@@ -1135,7 +1135,7 @@
                                                         <div class="hover-area">
                                                             <div class="profile-body">
                                                                 <h2 class="profile-title">
-                                                                    Selfie Doggy </h2>
+                                                                    Selfie Doggie </h2>
                                                                 <p class="profile-designation"></p>
                                                             </div>
                                                         </div>
@@ -1164,7 +1164,7 @@
                                                         <div class="hover-area">
                                                             <div class="profile-body">
                                                                 <h2 class="profile-title">
-                                                                    Selfie Doggy </h2>
+                                                                    Selfie Doggie </h2>
                                                                 <p class="profile-designation"></p>
                                                             </div>
                                                         </div>
@@ -1189,7 +1189,7 @@
                                                         <div class="hover-area">
                                                             <div class="profile-body">
                                                                 <h2 class="profile-title">
-                                                                    Selfie Doggy </h2>
+                                                                    Selfie Doggie </h2>
                                                                 <p class="profile-designation"></p>
                                                             </div>
                                                         </div>
@@ -1214,7 +1214,7 @@
                                                         <div class="hover-area">
                                                             <div class="profile-body">
                                                                 <h2 class="profile-title">
-                                                                    Selfie Doggy </h2>
+                                                                    Selfie Doggie </h2>
                                                                 <p class="profile-designation"></p>
                                                             </div>
                                                         </div>
@@ -1243,7 +1243,7 @@
                                                         <div class="hover-area">
                                                             <div class="profile-body">
                                                                 <h2 class="profile-title">
-                                                                    Selfie Doggy </h2>
+                                                                    Selfie Doggie </h2>
                                                                 <p class="profile-designation"></p>
                                                             </div>
                                                         </div>
@@ -1268,7 +1268,7 @@
                                                         <div class="hover-area">
                                                             <div class="profile-body">
                                                                 <h2 class="profile-title">
-                                                                    Selfie Doggy </h2>
+                                                                    Selfie Doggie </h2>
                                                                 <p class="profile-designation"></p>
                                                             </div>
                                                         </div>
@@ -1293,7 +1293,7 @@
                                                         <div class="hover-area">
                                                             <div class="profile-body">
                                                                 <h2 class="profile-title">
-                                                                    Selfie Doggy </h2>
+                                                                    Selfie Doggie </h2>
                                                                 <p class="profile-designation"></p>
                                                             </div>
                                                         </div>
@@ -1321,7 +1321,7 @@
                 <div class="e-con-inner">
                     <div class="elementor-element elementor-element-41308de elementor-invisible elementor-widget elementor-widget-heading" data-id="41308de" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;slideInLeft&quot;}" data-widget_type="heading.default">
                         <div class="elementor-widget-container">
-                            <h2 class="elementor-heading-title elementor-size-default">Join the Selfie Doggy Community
+                            <h2 class="elementor-heading-title elementor-size-default">Join the Selfie Doggie Community
                             </h2>
                         </div>
                     </div>
@@ -1653,12 +1653,12 @@
                             </style>
                             <div class="elementor-social-icons-wrapper elementor-grid">
                                 <span class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-grow elementor-repeater-item-f131ccc" href="https://t.me/OfficialSdoggy" target="_blank">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-grow elementor-repeater-item-f131ccc" href="https://t.me/OfficialSDOGIE" target="_blank">
 						<span class="elementor-screen-only">Telegram-plane</span>
                                 <svg class="e-font-icon-svg e-fab-telegram-plane" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"></path></svg>                                </a>
                                 </span>
                                 <span class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-animation-grow elementor-repeater-item-aacef33" href="https://twitter.com/OfficialSdoggy" target="_blank">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-animation-grow elementor-repeater-item-aacef33" href="https://twitter.com/OfficialSDOGIE" target="_blank">
 						<span class="elementor-screen-only">X-twitter</span>
                                 <svg class="e-font-icon-svg e-fab-x-twitter" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"></path></svg>                                </a>
                                 </span>
@@ -1672,7 +1672,7 @@
             <div class="e-con-inner">
                 <div class="elementor-element elementor-element-c1c3a5d elementor-invisible elementor-widget elementor-widget-heading" data-id="c1c3a5d" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;slideInUp&quot;}" data-widget_type="heading.default">
                     <div class="elementor-widget-container">
-                        <h2 class="elementor-heading-title elementor-size-default">© 2024 Selfie Doggy. All rights reserved.
+                        <h2 class="elementor-heading-title elementor-size-default">© 2024 Selfie Doggie. All rights reserved.
 
                         </h2>
                     </div>
